# SENTIENT_BACKUP

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-installers.yml  ci.yml
crates/sentient-backup-core/: Cargo.toml
crates/sentient-backup-core/src/: backup.rs  categories.rs  db.rs  error.rs  lib.rs  manifest.rs  pg_tools.rs  restore.rs
docs/: RESEARCH_AND_PLAN.md
packaging/arch/: PKGBUILD  sentient-backup-restore.desktop
scripts/: fetch_pgtools_linux.sh  make_ico.py  make_installer_images.py
src/: app.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  store.rs
